# queries-rs

./: Cargo.toml  README.md
.github/workflows/: ci.yml
crates/queries/: Cargo.toml
crates/queries-derive/: Cargo.toml
crates/queries-derive/src/: lib.rs
crates/queries/src/: lib.rs
crates/queries/tests/: queries_test.rs
