[workspace]
resolver = "3"
members = ["crates/queries", "crates/queries-derive"]

[workspace.package]
version = "0.2.0"
authors = ["Alex Gaynor <alex.gaynor@gmail.com>"]
description = "A library to make managing SQL queries easy"
repository = "https://github.com/alex/queries-rs"
license = "BSD-3-Clause"
edition = "2024"
# This specifies the MSRV
rust-version = "1.85.0"
