[package]
name = "queries"
version.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
futures = "0.3.31"
queries-derive = { version = "0.1.0", path = "../queries-derive" }
sqlx = "0.8.6"

[dev-dependencies]
tokio = { version = "1.47.0", features = ["rt", "macros"] }
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio"] }
